--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </audio>
 
     <div id="start-screen" class="text-center animate__animated animate__zoomIn">
-        <h2 class="mb-5" style="color: #d81b60;">A special letter for someone special...</h2>
+        <h2 class="mb-5" style="color: #d81b60;">A special letter ...</h2>
         <div class="envelope-wrapper mx-auto" id="envelope" onclick="unfoldLove()">
             <div class="envelope-flap"></div>
             <div class="position-absolute top-50 start-50 translate-middle">
@@ -168,7 +168,7 @@
     </div>
 
     <div id="success-screen" class="d-none text-center animate__animated animate__heartBeat">
-        <h1 class="display-1 fw-bold text-white mb-3">I LOVE YOU ❤️</h1>
+        <h1 class="display-1 fw-bold text-white mb-3">❤️</h1>
         <h2 class="text-white">Forever & Always, Garima</h2>
         <p class="text-white mt-3">Move your mouse or click to rain hearts!</p>
     </div>
