--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 <body>
 
     <audio id="love-song" loop>
-        <source src="https://raw.githubusercontent.com/tobecurious/valentine-2026/main/litesaturation.mp3" type="audio/mpeg">
+        <source src="https://github.com/tobecurious/valentine-2026/raw/main/litesaturation.mp3" type="audio/mpeg">
     </audio>
 
     <div id="music-control" onclick="toggleMusic()" class="animate__animated animate__fadeIn">
