--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             "Every moment with you is a dream ✨",
             "I'm so lucky to have you ❤️",
             "You make my heart skip a beat 💓",
-            "I love you more than words can say! 🌹",
+            "I love spending time with you! 🌹",
             "You are my sunshine ☀️",
             "My favorite place is inside your hug 🤗",
             "You're the best part of my day!",
