--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
     <div id="start-screen" class="text-center animate__animated animate__zoomIn">
         <h2 class="mb-5" style="color: #d81b60;">A special letter for someone special... <br/> I made something small for you…
-            Open this when you’re smiling 💖</h2>
+            Open this while you’re smiling 💖</h2>
         <div class="envelope-wrapper mx-auto" id="envelope" onclick="unfoldLove()">
             <div class="envelope-flap"></div>
             <div class="position-absolute top-50 start-50 translate-middle">
