--- a/index.html
+++ b/index.html
@@ -316,9 +316,7 @@
         <div class="mt-4">
             <button class="btn btn-light btn-custom text-danger px-5" onclick="openLetter()">📖 Read My Heart</button>
         </div>
-        <p class="text-white mt-4 opacity-75">Click the floating hearts for more surprises!<br>
-        PS: In one of the heart there is a special surprise hidden for you.<br>
-        Let me know when you find it.</p>
+        <p class="text-white mt-4 opacity-75">Click the floating hearts for more surprises!</p>
     </div>
 
     <script>
